add contact and location info

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,10 @@
 
 2) fix main text
 
-3) create footer
-
 4) hyperlink to a new page
 
 5) anketa
 
-6) info for 4 jewelrys
-
 7) contact 
+
+8) decorate buttons
